# distributed-dataset-processor

./: .gitignore  README.md
ImageProcessor/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yaml
ImageProcessor/crates/common/: Cargo.toml
ImageProcessor/crates/common/src/: lib.rs
ImageProcessor/crates/consumers/: Cargo.toml
ImageProcessor/crates/consumers/src/: main.rs  utils.rs
ImageProcessor/crates/db_utils/: Cargo.toml
ImageProcessor/crates/db_utils/src/: lib.rs  types.rs
ImageProcessor/crates/img-api-server/: Cargo.toml
ImageProcessor/crates/img-api-server/src/: main.rs  utils.rs
ImageProcessor/crates/queue/: Cargo.toml
ImageProcessor/crates/queue/src/: admin.rs  consumer.rs  lib.rs
