[package]
name = "db_utils"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = {version="1.0.219", features=["derive"]}
tokio = { version = "1", features = ["full"] }
mongodb = "2.8"
serde_json = "1.0"
futures = "0.3"
chrono = { version = "0.4.41", features = ["serde"] }
common = { path = "../common/" }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
