[package]
name = "queue"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.38.0", features = ["tokio"] }
serde_json = "1.0.142"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
common = { path = "../common" }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
